add support for VMs

--- a/config.j2.conf
+++ b/config.j2.conf
@@ -11,3 +11,16 @@
 	}
 	{% endif %}
 {% endfor %}
+{% for vm in vms %}
+	{% if vm.role and (vm.role.name in ["Server"]) %}
+	object Host "{{vm.name}}" {
+		import "generic-host"
+		{% if vm.primary_ip4 %}
+			address = "{{vm.primary_ip4.address.split("/")[0]}}"
+		{% endif %}
+		{% if vm.primary_ip6 %}
+			address6 = "{{vm.primary_ip6.address.split("/")[0]}}"
+		{% endif %}
+	}
+	{% endif %}
+{% endfor %}
