add addresses as var, add ipmi and procs checks to relevant hosts

--- a/config/conf.d/commands.conf
+++ b/config/conf.d/commands.conf
@@ -1,9 +1,16 @@
 object CheckCommand "sown-nrpe" {
 	import "nrpe"
+	//temporary hack as check_nrpe v3 can't talk to older 16.04 servers running nrpe daemon v2
+	//https://github.com/NagiosEnterprises/nrpe/issues/113
+	//https://bugs.launchpad.net/ubuntu/+source/nagios-nrpe/+bug/1782650
 	command = [ SOWNPluginDir + "/check_nrpe_v2" ]
 }
 
 object CheckCommand "check_procs"  {
         import "sown-nrpe"
 	vars.nrpe_command = "check_total_procs"
+}
+
+object CheckCommand "check_rmcpping" {
+	command  = [ SOWNPluginDir + "/check_rmcpping", "$ipmi_ip$" ]
 }
