--- a/config/conf.d/hosts.j2.conf
+++ b/config/conf.d/hosts.j2.conf
@@ -8,6 +8,12 @@
 		{% if device.primary_ip6 %}
 			address6 = "{{device.primary_ip6.address.split("/")[0]}}"
 		{% endif %}
+		vars.role = "{{device.device_role.name}}"
+		vars.addresses = {
+			{% for interface, ips in device.interfaces.items() %}
+				{{interface}} = [{% for ip in ips %}"{{ip.address.split("/")[0]}}", {% endfor %}],
+			{% endfor %}
+		}
 	}
 	{% endif %}
 {% endfor %}
@@ -21,8 +27,7 @@
 		{% if vm.primary_ip6 %}
 			address6 = "{{vm.primary_ip6.address.split("/")[0]}}"
 		{% endif %}
+		vars.role = "{{vm.role.name}}"
 	}
 	{% endif %}
 {% endfor %}
-
-
