--- a/config/conf.d/services.conf
+++ b/config/conf.d/services.conf
@@ -1,8 +1,13 @@
-apply Service "check_procs" {
+apply Service "PROCS" {
 	import "generic-service"
-	
 	check_command = "check_procs"
+	assign where host.vars.role in ServerRoles
+}
 
-	assign where host.name in ["VMS", "GW2"]
+apply Service for (interface => addresses in host.vars.addresses) {
+	import "generic-service"
+	check_command = "check_rmcpping"
+	vars.ipmi_ip = addresses[0]
+	assign where interface in ["ipmi0", "idrac0"]
 }
 
