add standard nrpe checks

--- a/config/conf.d/constants.conf
+++ b/config/conf.d/constants.conf
@@ -1,2 +1,17 @@
 const SOWNPluginDir = "/opt/sown/monitoring/checks"
+
 const ServerRoles = ["Backup Server", "Server", "Router"]
+
+const GenericNRPEChecks = {
+	"PROCS" = "check_total_procs",
+	"ZOMBIE" = "check_zombie_procs",
+	"SYSTEMD" = "check_systemd",
+	"UNAME" = "check_uname",
+	"NRPE" = "check_nrpe",
+	"MAILBOX" = "check_mail",
+	"LOAD" = "check_load",
+	"UPTIME" = "check_uptime",
+	"USERS" = "check_users",
+	"REBOOT" = "check_reboot",
+	"PACKAGES" = "check_packages",
+}
