--- a/config/conf.d/services.conf
+++ b/config/conf.d/services.conf
@@ -1,9 +1,3 @@
-apply Service "PROCS" {
-	import "generic-service"
-	check_command = "check_procs"
-	assign where host.vars.role in ServerRoles
-}
-
 apply Service for (interface => addresses in host.vars.addresses) {
 	import "generic-service"
 	check_command = "check_rmcpping"
@@ -11,3 +5,8 @@ apply Service for (interface => addresses in host.vars.addresses) {
 	assign where interface in ["ipmi0", "idrac0"]
 }
 
+apply Service for (display_name => check in GenericNRPEChecks) {
+	import "generic-service"
+	check_command = check
+	assign where host.vars.role in ServerRoles
+}
