--- a/config/conf.d/commands.conf
+++ b/config/conf.d/commands.conf
@@ -6,9 +6,12 @@ object CheckCommand "sown-nrpe" {
 	command = [ SOWNPluginDir + "/check_nrpe_v2" ]
 }
 
-object CheckCommand "check_procs"  {
-        import "sown-nrpe"
-	vars.nrpe_command = "check_total_procs"
+
+for (var name => var nrpecommand in GenericNRPEChecks) {
+	object CheckCommand  nrpecommand use(nrpecommand) {
+	        import "sown-nrpe"
+		vars.nrpe_command = nrpecommand
+	}
 }
 
 object CheckCommand "check_rmcpping" {
