add VMS disk monitoring, closes sown/tasks#42

--- a/config/conf.d/commands.conf
+++ b/config/conf.d/commands.conf
@@ -6,8 +6,10 @@ object CheckCommand "sown-nrpe" {
 	command = [ SOWNPluginDir + "/check_nrpe_v2" ]
 }
 
+NRPECommands = GenericNRPEChecks.values()
+NRPECommands.add("check_disk_vms")
 
-for (var name => var nrpecommand in GenericNRPEChecks) {
+for (var nrpecommand in NRPECommands) {
 	object CheckCommand  nrpecommand use(nrpecommand) {
 	        import "sown-nrpe"
 		vars.nrpe_command = nrpecommand
