--- a/config/conf.d/services.conf
+++ b/config/conf.d/services.conf
@@ -10,3 +10,9 @@ apply Service for (display_name => check in GenericNRPEChecks) {
 	check_command = check
 	assign where host.vars.role in ServerRoles
 }
+
+object Service "DISK-VMS" {
+	import "generic-service"
+	check_command = "check_disk_vms"
+	host_name = "VMS"
+}
