added notifications, with adapted script from old icinga setup

--- a/config/conf.d/000_constants.conf
+++ b/config/conf.d/000_constants.conf
@@ -1,4 +1,5 @@
 const SOWNPluginDir = "/opt/sown/monitoring/checks"
+const SOWNScriptsDir = "/opt/sown/monitoring/scripts"
 
 const ServerRoles = ["Backup Server", "Server", "Router"]
 
