restructured service declarations to use interval templates

--- a/config/conf.d/000_constants.conf
+++ b/config/conf.d/000_constants.conf
@@ -16,3 +16,5 @@ const GenericNRPEChecks = {
 	"REBOOT" = "check_reboot",
 	"PACKAGES" = "check_packages",
 }
+
+const CheckFrequencies = ["continuous", "frequent", "infrequent"]
