--- a/config/conf.d/commands.conf
+++ b/config/conf.d/commands.conf
@@ -6,8 +6,20 @@ object CheckCommand "sown-nrpe" {
 	command = [ SOWNPluginDir + "/check_nrpe_v2" ]
 }
 
-NRPECommands = GenericNRPEChecks.values()
-NRPECommands.add("check_disk_vms")
+NRPECommands = [
+	"check_total_procs",
+	"check_zombie_procs",
+	"check_systemd",
+	"check_uname",
+	"check_nrpe",
+	"check_mail",
+	"check_load",
+	"check_uptime",
+	"check_users",
+	"check_reboot",
+	"check_packages",
+	"check_disk_vms"
+]
 
 for (var nrpecommand in NRPECommands) {
 	object CheckCommand  nrpecommand use(nrpecommand) {
