--- a/config/conf.d/services.conf
+++ b/config/conf.d/services.conf
@@ -1,3 +1,24 @@
+template Service "generic-service" {
+	max_check_attempts = 5
+	check_interval = 1m
+	retry_interval = 30s
+}
+
+template Service "continuous-service" {
+	import "generic-service"
+	check_interval  = 1m
+}
+
+template Service "frequent-service" {
+	import "generic-service"
+	check_interval  = 1h
+}
+
+template Service "infrequent-service" {
+	import "generic-service"
+	check_interval  = 1d
+}
+
 apply Service for (interface => addresses in host.vars.addresses) {
 	import "generic-service"
 	check_command = "check_rmcpping"
@@ -5,14 +26,74 @@ apply Service for (interface => addresses in host.vars.addresses) {
 	assign where interface in ["ipmi0", "idrac0"]
 }
 
-apply Service for (display_name => check in GenericNRPEChecks) {
-	import "generic-service"
-	check_command = check
-	assign where host.vars.role in ServerRoles
-}
-
 object Service "DISK-VMS" {
 	import "generic-service"
 	check_command = "check_disk_vms"
 	host_name = "VMS"
+}
+
+apply Service "PROCS" {
+	import "continuous-service"
+	check_command = "check_total_procs"
+	assign where host.vars.role in ServerRoles
+}
+
+apply Service "ZOMBIE" {
+	import "continuous-service"
+	check_command = "check_zombie_procs"
+	assign where host.vars.role in ServerRoles
+}
+
+apply Service "SYSTEMD" {
+	import "continuous-service"
+	check_command = "check_systemd"
+	assign where host.vars.role in ServerRoles
+}
+
+apply Service "UNAME" {
+	import "continuous-service"
+	check_command = "check_uname"
+	assign where host.vars.role in ServerRoles
+}
+
+apply Service "NRPE" {
+	import "continuous-service"
+	check_command = "check_nrpe"
+	assign where host.vars.role in ServerRoles
+}
+
+apply Service "MAILBOX" {
+	import "frequent-service"
+	check_command = "check_mail"
+	assign where host.vars.role in ServerRoles
+}
+
+apply Service "LOAD" {
+	import "continuous-service"
+	check_command = "check_load"
+	assign where host.vars.role in ServerRoles
+}
+
+apply Service "UPTIME" {
+	import "continuous-service"
+	check_command = "check_uptime"
+	assign where host.vars.role in ServerRoles
+}
+
+apply Service "USERS" {
+	import "continuous-service"
+	check_command = "check_users"
+	assign where host.vars.role in ServerRoles
+}
+
+apply Service "REBOOT" {
+	import "frequent-service"
+	check_command = "check_reboot"
+	assign where host.vars.role in ServerRoles
+}
+
+apply Service "PACKAGES" {
+	import "frequent-service"
+	check_command = "check_packages"
+	assign where host.vars.role in ServerRoles
 }
