add ping checks (migrated from /etc/icinga2)

--- a/config/conf.d/services.conf
+++ b/config/conf.d/services.conf
@@ -26,6 +26,18 @@ apply Service for (interface => addresses in host.vars.addresses) {
 	assign where interface in ["ipmi0", "idrac0"]
 }
 
+apply Service "PING4" {
+	import "generic-service"
+	check_command = "ping4"
+	assign where host.address
+}
+
+apply Service "PING6" {
+	import "generic-service"
+	check_command = "ping6"
+	assign where host.address6
+}
+
 object Service "DISK-VMS" {
 	import "generic-service"
 	check_command = "check_disk_vms"
