add ping checks on multiple ips

--- a/config/conf.d/services.conf
+++ b/config/conf.d/services.conf
@@ -26,6 +26,29 @@ apply Service for (interface => addresses in host.vars.addresses) {
 	assign where interface in ["ipmi0", "idrac0"]
 }
 
+function getAddrs(alladdresses, host){
+	out = []
+	for(interface => addresses in alladdresses){
+		for(address in addresses){
+			if(address != host.address && address != host.address6){
+				out.add({
+					"addr" = address,
+					"interface" = interface
+				})
+			}
+		}
+	}
+	return out
+}
+
+apply Service for (address in getAddrs(host.vars.addresses, host)){
+	import "generic-service"
+	check_command = "ping"
+	vars.ping_address = address.addr
+	assign where !(address.interface in ["ipmi0", "idrac0"]) && address.addr != host.address && address.addr != host.address6
+	name = "PING-" + address.interface + "-" + address.addr
+}
+
 apply Service "PING4" {
 	import "generic-service"
 	check_command = "ping4"
