add passive checks for backups using tags from netbox

--- a/config/conf.d/hosts.j2.conf
+++ b/config/conf.d/hosts.j2.conf
@@ -14,6 +14,11 @@
 				{{interface}} = [{% for ip in ips %}"{{ip.address.split("/")[0]}}", {% endfor %}],
 			{% endfor %}
 		}
+		vars.tags = [
+			{% for tag in device.tags %}
+				"{{tag}}",
+			{% endfor %}
+		]
 	}
 	{% endif %}
 {% endfor %}
@@ -28,6 +33,11 @@
 			address6 = "{{vm.primary_ip6.address.split("/")[0]}}"
 		{% endif %}
 		vars.role = "{{vm.role.name}}"
+		vars.tags = [
+			{% for tag in vm.tags %}
+				"{{tag}}",
+			{% endfor %}
+		]
 	}
 	{% endif %}
 {% endfor %}
