--- a/config/conf.d/services.conf
+++ b/config/conf.d/services.conf
@@ -132,3 +132,10 @@ apply Service "PACKAGES" {
 	check_command = "check_packages"
 	assign where host.vars.role in ServerRoles
 }
+
+apply Service "BACKUP" {
+	import "generic-service"
+	check_command = "passive"
+	assign where "Backup" in host.vars.tags
+	check_interval = 1d
+}
