add dependency for nrpe

--- a/config/conf.d/commands.conf
+++ b/config/conf.d/commands.conf
@@ -6,7 +6,7 @@ object CheckCommand "sown-nrpe" {
 	command = [ SOWNPluginDir + "/check_nrpe_v2" ]
 }
 
-NRPECommands = [
+const NRPECommands = [
 	"check_total_procs",
 	"check_zombie_procs",
 	"check_systemd",
