--- a/config/conf.d/services.conf
+++ b/config/conf.d/services.conf
@@ -27,7 +27,7 @@ apply Service for (interface => addresses in host.vars.addresses) {
 }
 
 function getAddrs(alladdresses, host){
-	out = []
+	var out = []
 	for(interface => addresses in alladdresses){
 		for(address in addresses){
 			if(address != host.address && address != host.address6){
