don't notify UNKNOWN state

--- a/config/conf.d/notifications.conf
+++ b/config/conf.d/notifications.conf
@@ -38,7 +38,7 @@ apply Notification "irc" to Host {
 }
 
 apply Notification "irc" to Service {
-	states = [ OK, Warning, Critical, Unknown ]
+	states = [ OK, Warning, Critical ]
 	users = [ "icingaadmin" ]
 	import "generic-notification"
 	command = "irc-service-notification"
