report backup check failure as critical

--- a/config/conf.d/services.conf
+++ b/config/conf.d/services.conf
@@ -138,4 +138,5 @@ apply Service "BACKUP" {
 	check_command = "passive"
 	assign where "Backup" in host.vars.tags
 	check_interval = 1d
+	vars.dummy_state = 2
 }
