add debsums check, bump nrpe timeout to 600s in line with server config

--- a/config/conf.d/commands.conf
+++ b/config/conf.d/commands.conf
@@ -4,6 +4,7 @@ object CheckCommand "sown-nrpe" {
 	//https://github.com/NagiosEnterprises/nrpe/issues/113
 	//https://bugs.launchpad.net/ubuntu/+source/nagios-nrpe/+bug/1782650
 	command = [ SOWNPluginDir + "/check_nrpe_v2" ]
+	vars.nrpe_timeout = 600
 }
 
 const NRPECommands = [
@@ -18,7 +19,8 @@ const NRPECommands = [
 	"check_users",
 	"check_reboot",
 	"check_packages",
-	"check_disk_vms"
+	"check_disk_vms",
+	"check_debsums",
 ]
 
 for (var nrpecommand in NRPECommands) {
