--- a/config/conf.d/services.conf
+++ b/config/conf.d/services.conf
@@ -140,3 +140,9 @@ apply Service "BACKUP" {
 	check_interval = 1d
 	vars.dummy_state = 2
 }
+
+apply Service "DEBSUMS" {
+	import "infrequent-service"
+	check_command = "check_debsums"
+	assign where host.vars.role in ServerRoles
+}
