switch to per host backup check

--- a/config/conf.d/services.conf
+++ b/config/conf.d/services.conf
@@ -133,12 +133,16 @@ apply Service "PACKAGES" {
 	assign where host.vars.role in ServerRoles
 }
 
-apply Service "BACKUP" {
+template Service "BACKUP" {
 	import "generic-service"
 	check_command = "passive"
-	assign where "Backup" in host.vars.tags
 	check_interval = 1d
 	vars.dummy_state = 2
+}
+
+apply Service "BACKUP-BACKUP3" {
+	import "BACKUP"
+	assign where "Backup" in host.vars.tags
 }
 
 apply Service "DEBSUMS" {
