add check_raid based on netbox RAID tag, see sown/tasks#57

--- a/config/conf.d/commands.conf
+++ b/config/conf.d/commands.conf
@@ -21,6 +21,7 @@ const NRPECommands = [
 	"check_packages",
 	"check_disk_vms",
 	"check_debsums",
+	"check_raid",
 ]
 
 for (var nrpecommand in NRPECommands) {
