--- a/config/conf.d/services.conf
+++ b/config/conf.d/services.conf
@@ -145,6 +145,12 @@ apply Service "BACKUP-BACKUP3" {
 	assign where "Backup" in host.vars.tags
 }
 
+apply Service "RAID" {
+	import "infrequent-service"
+	check_command = "check_raid"
+	assign where "RAID" in host.vars.tags
+}
+
 apply Service "DEBSUMS" {
 	import "infrequent-service"
 	check_command = "check_debsums"
