add rack hosts with temperature checks, with rack info from netbox, temperature logic from old check_temps

--- a/config/conf.d/commands.conf
+++ b/config/conf.d/commands.conf
@@ -22,6 +22,7 @@ const NRPECommands = [
 	"check_disk_vms",
 	"check_debsums",
 	"check_raid",
+	"check_temp",
 ]
 
 for (var nrpecommand in NRPECommands) {
