--- a/config/conf.d/dependencies.conf
+++ b/config/conf.d/dependencies.conf
@@ -8,3 +8,8 @@ apply Dependency "nrpe-checks" to Service {
 	//instead the dependency triggers early and is supressed into one notification correctly
 	ignore_soft_states = false
 }
+
+apply Dependency "temps" to Service {
+	assign where service.name == "TEMP"
+	parent_host_name = host.vars.rack
+}
