--- a/config/conf.d/hosts.j2.conf
+++ b/config/conf.d/hosts.j2.conf
@@ -19,6 +19,8 @@
 				"{{tag}}",
 			{% endfor %}
 		]
+		vars.rack = "{{device.rack.name}}"
+		vars.type = "Physical"
 	}
 	{% endif %}
 {% endfor %}
@@ -38,6 +40,13 @@
 				"{{tag}}",
 			{% endfor %}
 		]
+		vars.type = "Virtual"
 	}
 	{% endif %}
+{% endfor %}
+
+{% for rack in racks %}
+	object Host "{{rack.name}}" {
+		import "rack-temperature"
+	}
 {% endfor %}
