--- a/config/conf.d/services.conf
+++ b/config/conf.d/services.conf
@@ -133,6 +133,12 @@ apply Service "PACKAGES" {
 	assign where host.vars.role in ServerRoles
 }
 
+apply Service "TEMP" {
+	import "infrequent-service"
+	check_command = "check_temp"
+	assign where "Physical" == host.vars.type
+}
+
 template Service "BACKUP" {
 	import "generic-service"
 	check_command = "passive"
