make guests depend on vm hosts

--- a/config/conf.d/hosts.j2.conf
+++ b/config/conf.d/hosts.j2.conf
@@ -21,6 +21,7 @@
 		]
 		vars.rack = "{{device.rack.name}}"
 		vars.type = "Physical"
+		vars.cluster = "{{device.cluster.name}}"
 	}
 	{% endif %}
 {% endfor %}
@@ -41,6 +42,7 @@
 			{% endfor %}
 		]
 		vars.type = "Virtual"
+		vars.host = "{{vm.cluster.name}}"
 	}
 	{% endif %}
 {% endfor %}
