--- a/config/conf.d/dependencies.conf
+++ b/config/conf.d/dependencies.conf
@@ -13,3 +13,23 @@ apply Dependency "temps" to Service {
 	assign where service.name == "TEMP"
 	parent_host_name = host.vars.rack
 }
+
+apply Dependency "vms-guests" for (vmshost in getVMS(host.vars.host)) to Host {
+	assign where host.vars.host
+	parent_host_name = vmshost
+	//apply dependency when nrpe is in soft state
+	//various 1-minutely checks, this stops them from alerting at the same time as nrpe
+	//instead the dependency triggers early and is supressed into one notification correctly
+	ignore_soft_states = false
+}
+
+function getVMS(cluster){
+	var hosts = get_objects(Host)
+	var clusterhosts = []
+	for(host in hosts){
+		if(cluster && host.vars.cluster == cluster){
+			clusterhosts.add(host.name)
+		}
+	}
+	return clusterhosts
+}
