increase time on backup checks, allow for 12h delay

--- a/config/conf.d/services.conf
+++ b/config/conf.d/services.conf
@@ -142,7 +142,7 @@ apply Service "TEMP" {
 template Service "BACKUP" {
 	import "generic-service"
 	check_command = "passive"
-	check_interval = 1d
+	check_interval = 36h
 	vars.dummy_state = 2
 }
 
