add virtual machine server role (still needs rethinking generally about how we do this, re ansible etc)

--- a/config/conf.d/000_constants.conf
+++ b/config/conf.d/000_constants.conf
@@ -1,7 +1,7 @@
 const SOWNPluginDir = "/opt/sown/monitoring/checks"
 const SOWNScriptsDir = "/opt/sown/monitoring/scripts"
 
-const ServerRoles = ["Backup Server", "Server", "Router"]
+const ServerRoles = ["Backup Server", "Server", "Router", "Virtual Machine Server"]
 
 const GenericNRPEChecks = {
 	"PROCS" = "check_total_procs",
