--- a/config/conf.d/hosts.j2.conf
+++ b/config/conf.d/hosts.j2.conf
@@ -1,5 +1,5 @@
 {% for device in devices %}
-	{% if device.device_role and (device.device_role.name in ["Server", "Backup Server", "Router"]) %}
+	{% if device.device_role and (device.device_role.name in ["Server", "Backup Server", "Router", "Virtual Machine Server"]) %}
 	object Host "{{device.name}}" {
 		import "generic-host"
 		{% if device.primary_ip4 %}
