restructure into zone for external checks on external-monitor

--- a/config/zones.d/sown/services.conf
+++ b/config/zones.d/sown/services.conf
@@ -162,3 +162,10 @@ apply Service "DEBSUMS" {
 	check_command = "check_debsums"
 	assign where host.vars.role in ServerRoles
 }
+
+object Service "EXT-PING6" {
+	import "generic-service"
+	check_command = "ping6"
+	host_name = "MONITOR2"
+	command_endpoint = "external-monitor.sown.org.uk"
+}
