increase number of ping checks and warning/crit levels, should hide transient failure a bit more

--- a/config/zones.d/sown/services.conf
+++ b/config/zones.d/sown/services.conf
@@ -41,8 +41,15 @@ function getAddrs(alladdresses, host){
 	return out
 }
 
+template Service "sown-ping-common" {
+	vars.ping_wpl = 20
+	vars.ping_cpl = 50
+	vars.ping_packets = 10
+}
+
 apply Service for (address in getAddrs(host.vars.addresses, host)){
 	import "generic-service"
+	import "sown-ping-common"
 	check_command = "ping"
 	vars.ping_address = address.addr
 	assign where !(address.interface in ["ipmi0", "idrac0"]) && address.addr != host.address && address.addr != host.address6
@@ -51,12 +58,14 @@ apply Service for (address in getAddrs(host.vars.addresses, host)){
 
 apply Service "PING4" {
 	import "generic-service"
+	import "sown-ping-common"
 	check_command = "ping4"
 	assign where host.address
 }
 
 apply Service "PING6" {
 	import "generic-service"
+	import "sown-ping-common"
 	check_command = "ping6"
 	assign where host.address6
 }
@@ -165,6 +174,7 @@ apply Service "DEBSUMS" {
 
 object Service "EXT-PING6" {
 	import "generic-service"
+	import "sown-ping-common"
 	check_command = "ping6"
 	host_name = "MONITOR2"
 	command_endpoint = "external-monitor.sown.org.uk"
