set colours for states, include state changes

--- a/config/zones.d/sown/notifications.conf
+++ b/config/zones.d/sown/notifications.conf
@@ -5,6 +5,7 @@ object NotificationCommand "irc-host-notification" {
 		NOTIFICATIONTYPE = "$notification.type$"
 		HOSTNAME = "$host.name$"
 		HOSTSTATE = "$host.state$"
+		LASTHOSTSTATE = "$host.last_state$"
 		LONGDATETIME = "$icinga.long_date_time$"
 		HOSTOUTPUT = "$host.output$"
 		NOTIFICATIONUMBER = "$notification.notification_number$"
@@ -19,6 +20,7 @@ object NotificationCommand "irc-service-notification" {
 		SERVICENAME = "$service.name$"
 		HOSTNAME = "$host.name$"
 		SERVICESTATE = "$service.state$"
+		LASTSERVICESTATE = "$service.last_state$"
 		LONGDATETIME = "$icinga.long_date_time$"
 		NOTIFICATIONUMBER = "$notification.notification_number$"
 	}
