handle hosts not in a rack

--- a/config/zones.d/sown/dependencies.conf
+++ b/config/zones.d/sown/dependencies.conf
@@ -10,7 +10,7 @@ apply Dependency "nrpe-checks" to Service {
 }
 
 apply Dependency "temps" to Service {
-	assign where service.name == "TEMP"
+	assign where service.name == "TEMP" && host.vars.rack
 	parent_host_name = host.vars.rack
 }
 
