fix VM dependencies on host

--- a/config/zones.d/sown/dependencies.conf
+++ b/config/zones.d/sown/dependencies.conf
@@ -14,22 +14,12 @@ apply Dependency "temps" to Service {
 	parent_host_name = host.vars.rack
 }
 
-apply Dependency "vms-guests" for (vmshost in getVMS(host.vars.host)) to Host {
+apply Dependency "vms-guests" for (vmshost in get_objects(Host).filter(function(h) use(host) { h.vars.cluster == host.vars.host }).map((h => h.name))) to Host {
+	//add a dependency for every VM, on all the hosts in the cluster
 	assign where host.vars.host
 	parent_host_name = vmshost
 	//apply dependency when nrpe is in soft state
 	//various 1-minutely checks, this stops them from alerting at the same time as nrpe
 	//instead the dependency triggers early and is supressed into one notification correctly
 	ignore_soft_states = false
-}
-
-function getVMS(cluster){
-	var hosts = get_objects(Host)
-	var clusterhosts = []
-	for(host in hosts){
-		if(cluster && host.vars.cluster == cluster){
-			clusterhosts.add(host.name)
-		}
-	}
-	return clusterhosts
 }
