add monitoring of netbox version

--- a/config/zones.d/sown/commands.conf
+++ b/config/zones.d/sown/commands.conf
@@ -23,6 +23,7 @@ const NRPECommands = [
 	"check_debsums",
 	"check_raid",
 	"check_temp",
+	"check_netbox_update",
 ]
 
 for (var nrpecommand in NRPECommands) {
