use last ok/up time for reminders

--- a/config/zones.d/sown/notifications.conf
+++ b/config/zones.d/sown/notifications.conf
@@ -6,7 +6,7 @@ object NotificationCommand "irc-host-notification" {
 		HOSTNAME = "$host.name$"
 		HOSTSTATE = "$host.state$"
 		LASTHOSTSTATE = "$host.last_state$"
-		LONGDATETIME = "$icinga.long_date_time$"
+		LONGDATETIME = "$host.last_state_up$"
 		HOSTOUTPUT = "$host.output$"
 		NOTIFICATIONUMBER = "$notification.notification_number$"
 	}
@@ -21,7 +21,7 @@ object NotificationCommand "irc-service-notification" {
 		HOSTNAME = "$host.name$"
 		SERVICESTATE = "$service.state$"
 		LASTSERVICESTATE = "$service.last_state$"
-		LONGDATETIME = "$icinga.long_date_time$"
+		LONGDATETIME = "$service.last_state_ok$"
 		NOTIFICATIONUMBER = "$notification.notification_number$"
 	}
 }
