add monitoring on PSUs for sown/tasks#39

--- a/config/zones.d/sown/commands.conf
+++ b/config/zones.d/sown/commands.conf
@@ -24,6 +24,7 @@ const NRPECommands = [
 	"check_raid",
 	"check_temp",
 	"check_netbox_update",
+	"check_psu",
 ]
 
 for (var nrpecommand in NRPECommands) {
