--- a/config/zones.d/sown/hosts.j2.conf
+++ b/config/zones.d/sown/hosts.j2.conf
@@ -22,6 +22,7 @@
 		vars.rack = "{{device.rack.name}}"
 		vars.type = "Physical"
 		vars.cluster = "{{device.cluster.name}}"
+		vars.power_count = {{device.power_count}}
 	}
 	{% endif %}
 {% endfor %}
