--- a/config/zones.d/sown/services.conf
+++ b/config/zones.d/sown/services.conf
@@ -81,6 +81,12 @@ object Service "DISK-VMS" {
 	host_name = "VMS"
 }
 
+apply Service "POWER" {
+	import "generic-service"
+	check_command = "check_psu"
+	assign where host.vars.power_count > 1
+}
+
 apply Service "PROCS" {
 	import "continuous-service"
 	check_command = "check_total_procs"
