add backup services for every backup server

--- a/config/zones.d/sown/services.conf
+++ b/config/zones.d/sown/services.conf
@@ -154,16 +154,14 @@ apply Service "TEMP" {
 	assign where "Physical" == host.vars.type
 }
 
-template Service "BACKUP" {
+apply Service for (backserver in get_objects(Host).filter(function(h) { "Backup Server" == h.vars.role }).map((h => h.name))) to Host {
+	//add a backup service for all hosts being backed up for every backup server
 	import "generic-service"
 	check_command = "passive"
 	check_interval = 36h
 	vars.dummy_state = 2
-}
-
-apply Service "BACKUP-BACKUP3" {
-	import "BACKUP"
 	assign where "Backup" in host.vars.tags
+	name = "BACKUP-" + backserver
 }
 
 apply Service "RAID" {
