add external ping checks, refactor existing ping checks to work and reduce complexity

--- a/config/zones.d/sown/hosts.j2.conf
+++ b/config/zones.d/sown/hosts.j2.conf
@@ -10,8 +10,8 @@
 		{% endif %}
 		vars.role = "{{device.device_role.name}}"
 		vars.addresses = {
-			{% for interface, ips in device.interfaces.items() %}
-				{{interface}} = [{% for ip in ips %}"{{ip.address.split("/")[0]}}", {% endfor %}],
+			{% for addr in device.ips %}
+				"{{addr.address.split("/")[0]}}" = "{{addr.interface.name}}"
 			{% endfor %}
 		}
 		vars.tags = [
@@ -37,6 +37,11 @@
 			address6 = "{{vm.primary_ip6.address.split("/")[0]}}"
 		{% endif %}
 		vars.role = "{{vm.role.name}}"
+		vars.addresses = {
+			{% for addr in vm.ips %}
+				"{{addr.address.split("/")[0]}}" = "{{addr.interface.name}}"
+			{% endfor %}
+		}
 		vars.tags = [
 			{% for tag in vm.tags %}
 				"{{tag}}",
