--- a/config/zones.d/sown/services.conf
+++ b/config/zones.d/sown/services.conf
@@ -19,26 +19,12 @@ template Service "infrequent-service" {
 	check_interval  = 1d
 }
 
-apply Service for (interface => addresses in host.vars.addresses) {
+apply Service for (address => interface in host.vars.addresses) {
 	import "generic-service"
 	check_command = "check_rmcpping"
-	vars.ipmi_ip = addresses[0]
+	vars.ipmi_ip = address
 	assign where interface in ["ipmi0", "idrac0"]
-}
-
-function getAddrs(alladdresses, host){
-	var out = []
-	for(interface => addresses in alladdresses){
-		for(address in addresses){
-			if(address != host.address && address != host.address6){
-				out.add({
-					"addr" = address,
-					"interface" = interface
-				})
-			}
-		}
-	}
-	return out
+	name = "IPMI"
 }
 
 template Service "sown-ping-common" {
@@ -47,28 +33,37 @@ template Service "sown-ping-common" {
 	vars.ping_packets = 10
 }
 
-apply Service for (address in getAddrs(host.vars.addresses, host)){
+apply Service for (address => interface in host.vars.addresses){
 	import "generic-service"
 	import "sown-ping-common"
 	check_command = "ping"
-	vars.ping_address = address.addr
-	assign where !(address.interface in ["ipmi0", "idrac0"]) && address.addr != host.address && address.addr != host.address6
-	name = "PING-" + address.interface + "-" + address.addr
+	vars.ping_address = address
+	assign where !(interface in ["ipmi0", "idrac0"])
+	name = if (address == host.address) {
+			"PING4"
+		} else if (address == host.address6) {
+			"PING6"
+		} else {
+			"PING-" + address + "-" + address
+		}
 }
 
-apply Service "PING4" {
+apply Service for (address => interface in host.vars.addresses){
 	import "generic-service"
 	import "sown-ping-common"
-	check_command = "ping4"
-	assign where host.address
+	check_command = "ping"
+	vars.ping_address = address
+	command_endpoint = "external-monitor.sown.org.uk"
+	assign where !(interface in ["ipmi0", "idrac0"]) && !cidr_match("10.5.0.0/16", address)
+	name = if (address == host.address) {
+			"EXT-PING4"
+		} else if (address == host.address6) {
+			"EXT-PING6"
+		} else {
+			"EXT-PING-" + interface + "-" + address
+		}
 }
 
-apply Service "PING6" {
-	import "generic-service"
-	import "sown-ping-common"
-	check_command = "ping6"
-	assign where host.address6
-}
 
 object Service "DISK-VMS" {
 	import "generic-service"
@@ -174,12 +169,4 @@ apply Service "DEBSUMS" {
 	import "infrequent-service"
 	check_command = "check_debsums"
 	assign where host.vars.role in ServerRoles
-}
-
-object Service "EXT-PING6" {
-	import "generic-service"
-	import "sown-ping-common"
-	check_command = "ping6"
-	host_name = "MONITOR2"
-	command_endpoint = "external-monitor.sown.org.uk"
 }
