--- a/config/zones.d/sown/services.conf
+++ b/config/zones.d/sown/services.conf
@@ -77,6 +77,12 @@ apply Service "POWER" {
 	assign where host.vars.power_count > 1
 }
 
+apply Service "SSH" {
+	import "continuous-service"
+	check_command = "ssh"
+	assign where host.vars.role in ServerRoles
+}
+
 apply Service "PROCS" {
 	import "continuous-service"
 	check_command = "check_total_procs"
