fix naming of ping checks to include interface name

--- a/config/zones.d/sown/services.conf
+++ b/config/zones.d/sown/services.conf
@@ -44,7 +44,7 @@ apply Service for (address => interface in host.vars.addresses){
 		} else if (address == host.address6) {
 			"PING6"
 		} else {
-			"PING-" + address + "-" + address
+			"PING-" + interface + "-" + address
 		}
 }
 
