don't notify downtime events

--- a/config/zones.d/sown/notifications.conf
+++ b/config/zones.d/sown/notifications.conf
@@ -27,7 +27,7 @@ object NotificationCommand "irc-service-notification" {
 }
 
 template Notification "generic-notification" {
-	types = [ Problem, Acknowledgement, Recovery, Custom, FlappingStart, FlappingEnd, DowntimeStart, DowntimeEnd, DowntimeRemoved ]
+	types = [ Problem, Acknowledgement, Recovery, Custom, FlappingStart, FlappingEnd ]
 }
 
 apply Notification "irc" to Host {
