fixes for newer pynetbox

--- a/config/zones.d/sown/hosts.j2.conf
+++ b/config/zones.d/sown/hosts.j2.conf
@@ -11,7 +11,7 @@
 		vars.role = "{{device.device_role.name}}"
 		vars.addresses = {
 			{% for addr in device.ips %}
-				"{{addr.address.split("/")[0]}}" = "{{addr.interface.name}}"
+				"{{addr.address.split("/")[0]}}" = "{{addr.assigned_object}}"
 			{% endfor %}
 		}
 		vars.tags = [
@@ -39,7 +39,7 @@
 		vars.role = "{{vm.role.name}}"
 		vars.addresses = {
 			{% for addr in vm.ips %}
-				"{{addr.address.split("/")[0]}}" = "{{addr.interface.name}}"
+				"{{addr.address.split("/")[0]}}" = "{{addr.assigned_object}}"
 			{% endfor %}
 		}
 		vars.tags = [
