Added ZPOOL checks and removed hack for old servers using nrpe v2.

--- a/config/zones.d/sown/000_constants.conf
+++ b/config/zones.d/sown/000_constants.conf
@@ -15,6 +15,8 @@ const GenericNRPEChecks = {
 	"USERS" = "check_users",
 	"REBOOT" = "check_reboot",
 	"PACKAGES" = "check_packages",
+	"ZPOOL-HEALTH" = "check_zpool_health",
+	"ZPOOL-USAGE" = "check_zpool_usage",
 }
 
 const CheckFrequencies = ["continuous", "frequent", "infrequent"]
