--- a/config/zones.d/sown/services.conf
+++ b/config/zones.d/sown/services.conf
@@ -176,3 +176,15 @@ apply Service "DEBSUMS" {
 	check_command = "check_debsums"
 	assign where host.vars.role in ServerRoles
 }
+
+apply Service "ZPOOL-HEALTH" {
+	import "frequent-service"
+	check_command = "check_zpool_health"
+	assign where "Backup Server" == host.vars.role 
+}
+
+apply Service "ZPOOL-USAGE" {
+	import "frequent-service"
+	check_command = "check_zpool_usage"
+	assign where "Backup Server" == host.vars.role
+}
