--- a/config/zones.d/sown/commands.conf
+++ b/config/zones.d/sown/commands.conf
@@ -1,9 +1,5 @@
 object CheckCommand "sown-nrpe" {
 	import "nrpe"
-	//temporary hack as check_nrpe v3 can't talk to older 16.04 servers running nrpe daemon v2
-	//https://github.com/NagiosEnterprises/nrpe/issues/113
-	//https://bugs.launchpad.net/ubuntu/+source/nagios-nrpe/+bug/1782650
-	command = [ SOWNPluginDir + "/check_nrpe_v2" ]
 	vars.nrpe_timeout = 600
 }
 
@@ -25,6 +21,8 @@ const NRPECommands = [
 	"check_temp",
 	"check_netbox_update",
 	"check_psu",
+	"check_zpool_health",
+	"check_zpool_usage",
 ]
 
 for (var nrpecommand in NRPECommands) {
