add icinga config for git repo monitoring

--- a/config/zones.d/sown/commands.conf
+++ b/config/zones.d/sown/commands.conf
@@ -23,6 +23,7 @@ const NRPECommands = [
 	"check_psu",
 	"check_zpool_health",
 	"check_zpool_usage",
+	"check_git",
 ]
 
 for (var nrpecommand in NRPECommands) {
