--- a/config/zones.d/sown/services.conf
+++ b/config/zones.d/sown/services.conf
@@ -188,3 +188,9 @@ apply Service "ZPOOL-USAGE" {
 	check_command = "check_zpool_usage"
 	assign where "Backup Server" == host.vars.role
 }
+
+apply Service "GIT" {
+	import "frequent-service"
+	check_command = "check_git"
+	assign where host.name == "MONITOR"
+}
