--- a/config/zones.d/sown/services.conf
+++ b/config/zones.d/sown/services.conf
@@ -192,5 +192,5 @@ apply Service "ZPOOL-USAGE" {
 apply Service "GIT" {
 	import "frequent-service"
 	check_command = "check_git"
-	assign where host.name == "MONITOR"
+	assign where host.vars.role in ServerRoles
 }
