--- a/config/zones.d/sown/000_constants.conf
+++ b/config/zones.d/sown/000_constants.conf
@@ -1,7 +1,7 @@
 const SOWNPluginDir = "/opt/sown/monitoring/checks"
 const SOWNScriptsDir = "/opt/sown/monitoring/scripts"
 
-const ServerRoles = ["Backup Server", "Server", "Router", "Virtual Machine Server", "LXD Host"]
+const ServerRoles = ["Backup Server", "Server", "Router", "Virtual Machine Server", "LXD Host", "SSH Gateway"]
 
 const GenericNRPEChecks = {
 	"PROCS" = "check_total_procs",
