--- a/config/zones.d/sown/hosts.j2.conf
+++ b/config/zones.d/sown/hosts.j2.conf
@@ -27,7 +27,7 @@
 	{% endif %}
 {% endfor %}
 {% for vm in vms %}
-	{% if vm.role and (vm.role.name in ["Server"]) %}
+	{% if vm.role and (vm.role.name in ["Server", "SSH Gateway"]) %}
 	object Host "{{vm.name}}" {
 		import "generic-host"
 		{% if vm.primary_ip4 %}
