rename VMS, add VMS-B53-1

--- a/config/zones.d/sown/services.conf
+++ b/config/zones.d/sown/services.conf
@@ -65,10 +65,16 @@ apply Service for (address => interface in host.vars.addresses){
 }
 
 
-object Service "DISK-VMS" {
+object Service "DISK-VMS-B32-1" {
 	import "generic-service"
 	check_command = "check_disk_vms"
-	host_name = "VMS"
+	host_name = "VMS-B32-1"
+}
+
+object Service "DISK-VMS-B53-1" {
+        import "generic-service"
+        check_command = "check_disk_vms"
+        host_name = "VMS-B53-1"
 }
 
 apply Service "POWER" {
