add discord notifications

--- a/config/zones.d/sown/notifications.conf
+++ b/config/zones.d/sown/notifications.conf
@@ -26,6 +26,16 @@ object NotificationCommand "irc-service-notification" {
 	}
 }
 
+object NotificationCommand "discord-host-notification" {
+	import "irc-host-notification"
+	command = [ SOWNScriptsDir + "/discord-notification.sh" ]
+}
+
+object NotificationCommand "discord-service-notification" {
+	import "irc-service-notification"
+	command = [ SOWNScriptsDir + "/discord-notification.sh" ]
+}
+
 template Notification "generic-notification" {
 	types = [ Problem, Acknowledgement, Recovery, Custom, FlappingStart, FlappingEnd ]
 }
@@ -44,6 +54,24 @@ apply Notification "irc" to Service {
 	users = [ "icingaadmin" ]
 	import "generic-notification"
 	command = "irc-service-notification"
+	interval = 24 * 60 * 60
+	assign where true
+}
+
+apply Notification "discord" to Host {
+	states = [ Up, Down ]
+	users = [ "icingaadmin" ]
+	import "generic-notification"
+	command = "discord-host-notification"
+	interval = 24 * 60 * 60
+	assign where true
+}
+
+apply Notification "discord" to Service {
+	states = [ OK, Warning, Critical ]
+	users = [ "icingaadmin" ]
+	import "generic-notification"
+	command = "discord-service-notification"
 	interval = 24 * 60 * 60
 	assign where true
 }
