move checks for IPMI to run on GW servers via NRPE

--- a/config/zones.d/sown/commands.conf
+++ b/config/zones.d/sown/commands.conf
@@ -33,6 +33,8 @@ for (var nrpecommand in NRPECommands) {
 	}
 }
 
-object CheckCommand "check_rmcpping" {
-	command  = [ SOWNPluginDir + "/check_rmcpping", "$ipmi_ip$" ]
+object CheckCommand "check_ipmi" {
+	import "sown-nrpe"
+	vars.nrpe_command = {{ "check_ipmi_" + macro("$host.name$").lower() }}
+	vars.nrpe_address = {{get_host(macro("$check_from_host$")).address6}}
 }
