--- a/config/zones.d/sown/hosts.j2.conf
+++ b/config/zones.d/sown/hosts.j2.conf
@@ -19,7 +19,10 @@
 				"{{tag}}",
 			{% endfor %}
 		]
-		vars.rack = "{{device.rack.name}}"
+		{% if device.rack %}
+			vars.rack = "{{device.rack.name}}"
+			vars.location = "{{device.rack.location.name}}"
+		{% endif %}
 		vars.type = "Physical"
 		vars.cluster = "{{device.cluster.name}}"
 		vars.power_count = {{device.power_count}}
