--- a/config/zones.d/sown/services.conf
+++ b/config/zones.d/sown/services.conf
@@ -21,9 +21,13 @@ template Service "infrequent-service" {
 
 apply Service for (address => interface in host.vars.addresses) {
 	import "generic-service"
-	check_command = "check_rmcpping"
-	vars.ipmi_ip = address
-	assign where interface in ["ipmi0", "idrac0"]
+	check_command = "check_ipmi"
+	vars.check_from_host = if (host.vars.location == "B53") {
+		"GW-B53"
+	} else {
+		"GW-B32"
+	}
+	assign where interface in ["ipmi0", "idrac0", "iDRAC"]
 	name = "IPMI"
 }
 
@@ -38,7 +42,7 @@ apply Service for (address => interface in host.vars.addresses){
 	import "sown-ping-common"
 	check_command = "ping"
 	vars.ping_address = address
-	assign where !(interface in ["ipmi0", "idrac0"])
+	assign where !(interface in ["ipmi0", "idrac0", "iDRAC"])
 	name = if (address == host.address) {
 			"PING4"
 		} else if (address == host.address6) {
@@ -54,7 +58,7 @@ apply Service for (address => interface in host.vars.addresses){
 	check_command = "ping"
 	vars.ping_address = address
 	command_endpoint = "external-monitor.sown.org.uk"
-	assign where !(interface in ["ipmi0", "idrac0"]) && !cidr_match("10.5.0.0/16", address)
+	assign where !(interface in ["ipmi0", "idrac0", "iDRAC"]) && !cidr_match("10.5.0.0/16", address)
 	name = if (address == host.address) {
 			"EXT-PING4"
 		} else if (address == host.address6) {
