--- a/config/zones.d/sown/services.conf
+++ b/config/zones.d/sown/services.conf
@@ -42,7 +42,7 @@ apply Service for (address => interface in host.vars.addresses){
 	import "sown-ping-common"
 	check_command = "ping"
 	vars.ping_address = address
-	assign where !(interface in ["ipmi0", "idrac0", "iDRAC"])
+	assign where !cidr_match("10.5.1.0/24", address) # exclude IPs on mgmt vlan
 	name = if (address == host.address) {
 			"PING4"
 		} else if (address == host.address6) {
@@ -58,7 +58,7 @@ apply Service for (address => interface in host.vars.addresses){
 	check_command = "ping"
 	vars.ping_address = address
 	command_endpoint = "external-monitor.sown.org.uk"
-	assign where !(interface in ["ipmi0", "idrac0", "iDRAC"]) && !cidr_match("10.5.0.0/16", address)
+	assign where !cidr_match("10.5.0.0/16", address)
 	name = if (address == host.address) {
 			"EXT-PING4"
 		} else if (address == host.address6) {
