change alerting thresholds on external ping monitors, we don't really care unless it's totally down

--- a/config/zones.d/sown/services.conf
+++ b/config/zones.d/sown/services.conf
@@ -52,6 +52,8 @@ apply Service for (address => interface in host.vars.addresses){
 	import "generic-service"
 	import "sown-ping-common"
 	check_command = "ping"
+	vars.ping_wpl = 50
+	vars.ping_cpl = 100
 	vars.ping_address = address
 	command_endpoint = "external-monitor.sown.org.uk"
 	assign where !(interface in ["ipmi0", "idrac0"]) && !cidr_match("10.5.0.0/16", address)
