--- a/config/zones.d/sown/hosts.j2.conf
+++ b/config/zones.d/sown/hosts.j2.conf
@@ -1,5 +1,5 @@
 {% for device in devices %}
-	{% if device.device_role and (device.device_role.name in ["Server", "Backup Server", "Router", "Virtual Machine Server", "LXD Host"]) %}
+	{% if device.device_role and (device.device_role.name in ["Server", "Backup Server", "Router", "Virtual Machine Server", "Container Host", "Monitoring", "LXD Host"]) %}
 	object Host "{{device.name}}" {
 		import "generic-host"
 		{% if device.primary_ip4 %}
@@ -30,7 +30,7 @@
 	{% endif %}
 {% endfor %}
 {% for vm in vms %}
-	{% if vm.role and (vm.role.name in ["Server", "SSH Gateway"]) %}
+	{% if vm.role and (vm.role.name in ["Server", "SSH Gateway", "Container Host", "Monitoring"]) %}
 	object Host "{{vm.name}}" {
 		import "generic-host"
 		{% if vm.primary_ip4 %}
