--- a/config/zones.d/sown/notifications.conf
+++ b/config/zones.d/sown/notifications.conf
@@ -73,5 +73,16 @@ apply Notification "discord" to Service {
 	import "generic-notification"
 	command = "discord-service-notification"
 	interval = 24 * 60 * 60
-	assign where true
+	assign where service.command_endpoint != "external-monitor.sown.org.uK"
 }
+
+apply Notification "discord" to Service {
+	states = [ OK, Warning, Critical ]
+	users = [ "icingaadmin" ]
+	import "generic-notification"
+	command = "discord-service-notification"
+	interval = 24 * 60 * 60
+	time.begins = 15 * 60
+	assign where service.command_endpoint == "external-monitor.sown.org.uK"
+}
+
