Adds keepalived and conntrackd checks.  Makes temperature check continuous.

--- a/config/zones.d/sown/services.conf
+++ b/config/zones.d/sown/services.conf
@@ -162,7 +162,7 @@ apply Service "PACKAGES" {
 }
 
 apply Service "TEMP" {
-	import "infrequent-service"
+	import "continuous-service"
 	check_command = "check_temp"
 	assign where "Physical" == host.vars.type
 }
@@ -205,4 +205,16 @@ apply Service "GIT" {
 	import "frequent-service"
 	check_command = "check_git"
 	assign where host.vars.role in ServerRoles
+}
+
+apply Service "CONNTRACKD" {
+        import "frequent-service"
+        check_command = "check_conntrackd"
+        assign where "Router" == host.vars.role
+}
+
+apply Service "KEEPALIVED" {
+        import "frequent-service"
+        check_command = "check_keepalived"
+        assign where "Router" == host.vars.role
 }
