--- a/config/zones.d/sown/commands.conf
+++ b/config/zones.d/sown/commands.conf
@@ -21,9 +21,12 @@ const NRPECommands = [
 	"check_temp",
 	"check_netbox_update",
 	"check_psu",
+	"check_temp",
 	"check_zpool_health",
 	"check_zpool_usage",
 	"check_git",
+	"check_conntrackd",
+	"check_keepalived",
 ]
 
 for (var nrpecommand in NRPECommands) {
