Adds DISKS check

--- a/config/zones.d/sown/commands.conf
+++ b/config/zones.d/sown/commands.conf
@@ -16,6 +16,7 @@ const NRPECommands = [
 	"check_reboot",
 	"check_packages",
 	"check_disk_vms",
+	"check_disks",
 	"check_debsums",
 	"check_raid",
 	"check_temp",
