--- a/config/zones.d/sown/services.conf
+++ b/config/zones.d/sown/services.conf
@@ -189,6 +189,12 @@ apply Service "DEBSUMS" {
 	assign where host.vars.role in ServerRoles
 }
 
+apply Service "DISKS" {
+        import "continuous-service"
+        check_command = "check_disks"
+        assign where host.vars.role in ServerRoles
+}
+
 apply Service "ZPOOL-HEALTH" {
 	import "frequent-service"
 	check_command = "check_zpool_health"
