fix for netbox v4 api changes

--- a/config/zones.d/sown/hosts.j2.conf
+++ b/config/zones.d/sown/hosts.j2.conf
@@ -1,5 +1,5 @@
 {% for device in devices %}
-	{% if device.device_role and (device.device_role.name in ["Server", "Backup Server", "Router", "Virtual Machine Server", "Container Host", "Monitoring", "LXD Host"]) %}
+	{% if device.role and (device.role.name in ["Server", "Backup Server", "Router", "Virtual Machine Server", "Container Host", "Monitoring", "LXD Host"]) %}
 	object Host "{{device.name}}" {
 		import "generic-host"
 		{% if device.primary_ip4 %}
@@ -8,7 +8,7 @@
 		{% if device.primary_ip6 %}
 			address6 = "{{device.primary_ip6.address.split("/")[0]}}"
 		{% endif %}
-		vars.role = "{{device.device_role.name}}"
+		vars.role = "{{device.role.name}}"
 		vars.addresses = {
 			{% for addr in device.ips %}
 				"{{addr.address.split("/")[0]}}" = "{{addr.assigned_object}}"
